karl/views/static/calendar.css
/* ... */
.cal_event_pos_right a {
  width: 92px;
  border-radius-topright: 5px;
  border-radius-bottomright: 5px;
  -moz-border-radius-topright: 5px;
  -moz-border-radius-bottomright: 5px;
  -webkit-border-top-right-radius: 5px;
  -webkit-border-bottom-right-radius: 5px;
}

/* hourly events */
.cal_hour_event {
  height: 26px;
  position: relative;
  line-height: 1.15em;
  font-size: 115%;
}
.cal_hour_event a {
  text-decoration: none;
}
body .cal_hour_event .cal_event_block  {
  float: left;
  position: absolute;
  left: -1px;
  padding: 0px 3px;
  overflow: hidden;
}
body .cal_event_pos_left a,
body .cal_event_pos_left .cal_event_block {
  border-right-width: 0;
}
body .cal_event_pos_center a,
body .cal_event_pos_center .cal_event_block {
  border-width: 1px 0;
}
body .cal_event_pos_right a,
body .cal_event_pos_right .cal_event_block {
  border-left-width: 0;
}
body .cal_hour_event .cal_event_block {
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  z-index: 1;
}
body .cal_hour_event .cal_event_block .time {
  font-size: 90%;
}

/* add new event */
.cal_hour_event .create {
  position: absolute;
  right: 0;
  width: 15px;
  height: 25px;
  z-index: 4;
  text-align: right;
}
.cal_hour_event .create .add {
  float: right;
  padding: 3px;
}
.cal_hour_event .create img {
  border: none;
}
.cal td.hov,
.cal div.hov {
  background-color: #ecf2ff !important;
}
.cal div.hov_below {
  background-color: #ecf2ff !important;
}
.cal td .add,
.cal div .add {
  visibility: hidden;
}
.cal td.hov .add,
.cal div.hov .add {
  visibility: visible;
  position: relative;
}
#startdate-field .all_day label {
  vertical-align: middle;
}
#startdate-field .all_day input {
  background: none;
  border: none;
}


/** =CALENDAR MONTH VIEW
----------------------------------------------- */
/* monthly */
.cal_month th {
  font-weight: normal;
  font-size: 90%;
}
.cal_month td {
  width: 93px;
  height: 93px;
  border: 1px solid #ccc;
}
.cal_month td.hov {
  background-color: #ecf2ff;
}
.cal_title {
  text-align: center;
  margin: 5px 0 7px 0;
}
.cal_month .label {
  height: 16px;
  font-size: 115%;
  line-height: 1em;
  text-align: right;
  padding: 0;
}
.cal_month .label .num {
  float: right;
  padding: 3px 3px 3px 10px;
}
.cal_month .hov .label .num:hover,
.cal_month .hov .label .calmore:hover {
    color: #333;
}
.cal_month .label .add,
.cal_month .label .calmore {
  float: left;
  padding: 3px 10px 4px 3px;
}
.cal_month .label a,
.cal_month .label a:visited {
  text-decoration: none;
  color: #3A74A9;
}
.cal_month .faded a,
.cal_month .faded a:visited {
  color: #bbb;
}
.cal_month .label a:hover {
  text-decoration: underline;
}
.cal_month .today {
  background-color: #fdffd2;
}
.cal_month .cal_event {
  position: relative;
  height: 15px;
  margin-bottom: 1px;
  line-height: 13px;
  font-size: 110%;
}
.cal_month .cal_event a {
  float: left;
  width: 90px;
  height: 15px;
  position: absolute;
  left: -1px;
  padding: 0 3px;
  text-decoration: none;
  overflow: hidden;
  border: none;
}
.at_time a {
  background-color: transparent;
}
.cal_month .cal_event_pos_full a {
  left: 1px;
  width: 87px;
}
.cal_month .cal_event_pos_left a {
  width: 89px;
  left: 1px;
}
.cal_month .cal_event_pos_right a {
  width: 89px;
}

.cal_month .label img {
  visibility: hidden;
  border: none;
}
.cal_month .hov .label img {
  visibility: visible;
}


/** =CALENDAR WEEK VIEW
----------------------------------------------- */
.cal_week {
  border-top: 1px solid #e6e6e6;
}
.cal_week th {
  border-left: 0;
  font-weight: normal;
  font-size: 85%;
}
.cal_week td {
  width: 85px;
  border: 1px solid #ccc;
  border-top-color: #e6e6e6;
  border-bottom-color: #e6e6e6;
}
.cal_week .last {
  width: auto;
  border-right: 0 !important;
}
.cal_week th a {
  text-decoration: none;
}
.cal_week .cal_event {
  height: 19px;
  line-height: 18px;
  font-size: 110%;
  position: relative;
}
.cal_week .cal_event a {
  float: left;
  width: 84px;
  height: 18px;
  position: absolute;
  left: -1px;
  padding-left: 3px;
  text-decoration: none;
  overflow: hidden;
}
.cal_week .cal_event_block {
  width: 79px;
}


/** =CALENDAR DAY VIEW
----------------------------------------------- */
.cal_day {
  border-top: 1px solid #e6e6e6;
}
.cal_day th {
  border-left: 0;
  font-weight: normal;
  font-size: 85%;
}
.cal_day td {
  border: 1px solid #ccc;
  border-top-color: #e6e6e6;
  border-bottom-color: #e6e6e6;
}
.cal_day .last {
  width: 21px;
  border-right: 0 !important;
}
.cal_day th a {
  text-decoration: none;
}
.cal_day .cal_dates .date {
  font-weight: bold;
}

.cal_day .cal_event {
  height: 19px;
  line-height: 18px;
  font-size: 110%;
  position: relative;
}
.cal_day .cal_event a {
  float: left;
  width: 598px;
  height: 18px;
  position: absolute;
  left: -1px;
  padding-left: 3px;
  overflow: hidden;
  text-decoration: none;
}
.cal_day .cal_event_block {
  width: 594px;
}


/** =CALENDAR AGENDA VIEW
----------------------------------------------- */
.cal_agenda .cal_expand th {
  padding: 0 8px 5px 8px;
  text-align: left;
  font-weight: normal;
}
.cal_agenda .cal_expand th a {
  margin-right: 8px;
  text-decoration: underline;
  font-weight: normal;
  font-size: 90%;
}
.cal_agenda .cal_agenda_range td {
  padding: 5px 0;
  text-align: center;
}
.cal_agenda .cal_agenda_range a {
  color: #666;
}
.cal_agenda th,
.cal_agenda td {
  font-size: 90%;
  padding: 9px 8px 7px 8px;
  border-bottom: 1px solid #eff3f5;
}
.cal_agenda tr.shade th,
.cal_agenda tr.shade td {
  background-color: #f7f9fa !important;
}
.cal_agenda .cal_agenda_day th {
  width: 80px;
  text-align: right;
  padding-right: 0px;
  line-height: 1.4em;
}
.cal_agenda_time {
  width: 115px;
  border-right: 1px solid #eff3f5;
  color: #666;
  text-align: right;
}
.cal_agenda_day a,
.cal_agenda_time {
  line-height: 1.4em;
}
.cal_agenda th a {
  text-decoration: none;
}
.cal_agenda_block {
  margin-bottom: 5px;
}
/* ... */

